Add `@PreAuthorize` annotations for security on controller methods; refactor test utilities and fixtures for improved consistency